--- a/FoodTracker/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/FoodTracker/Base.lproj/Main.storyboard
@@ -112,7 +112,11 @@
                     </view>
                     <navigationItem key="navigationItem" title="New Meal" id="rTH-Vf-I9s">
                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="WUK-OG-1Yd"/>
-                        <barButtonItem key="rightBarButtonItem" title="Save" id="2TJ-PL-XxJ"/>
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="2TJ-PL-XxJ">
+                            <connections>
+                                <segue destination="Izk-9p-gPL" kind="unwind" unwindAction="unwindToMealListWithSender:" id="CVp-Fq-xTy"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="nameTextField" destination="8Dj-Hq-ifu" id="YeO-zr-utA"/>
@@ -122,6 +126,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <exit id="Izk-9p-gPL" userLabel="Exit" sceneMemberID="exit"/>
                 <tapGestureRecognizer id="Es5-ba-Ud9">
                     <connections>
                         <action selector="selectImageFromPhotoLibrary:" destination="BYZ-38-t0r" id="CBe-6C-zSo"/>
